--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
         "paths": {
             "entities/*": ["entities/*"],
             "pages/*": ["pages/*"],
+            "widgets/*": ["widgets/*"],
             "shared/*": ["shared/*"]
         }
     }
