--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
             "entities/*": ["entities/*"],
             "pages/*": ["pages/*"],
             "widgets/*": ["widgets/*"],
+            "features/*": ["features/*"],
             "shared/*": ["shared/*"]
         }
     }
